add contact schema
